Fixed a minor visual issue on tablet

--- a/src/styles/modal.sass
+++ b/src/styles/modal.sass
@@ -47,3 +47,10 @@
     .video
       width: 100%
       height: 100%
+
+
+// Media Queries ↓
+@media (max-width: 1000px)
+  .modal
+    .btnClose
+      right: 4rem
